--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>아이샘톡</title>
+    <title>키즈링크</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
