fix: Vite로 변경하면서 생긴 충돌 해결
- 캘린더 css 변경
- 선생님 홈 화면 3d 아이콘 변경

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>키즈링크</title>
   </head>
   <body>
     <div id="root"></div>
